--- a/.htaccess
+++ b/.htaccess
@@ -5,6 +5,6 @@ RewriteRule ^index\.php$ - [L]
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule . /ithive.loc/index.php [L]
-RewriteRule (.*) /ithive.loc/index.php?$1 [QSA,L]
+#RewriteRule (.*) /ithive.loc/index.php?$1 [QSA,L]
 </IfModule>
 
